--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,6 @@ button {
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
-  outline: 2px solid red;
 }
 .visually-hidden {
   position: absolute;
@@ -56,7 +55,6 @@ button {
 .header-box {
   display: flex;
   justify-content: space-between;
-  height: 80px;
 }
 .nav {
   display: flex;
@@ -69,22 +67,20 @@ button {
   font-size: 26px;
   line-height: calc(31 / 26);
   color: var(--brand-color);
+  padding: 32px 78px 32px 0;
 }
 .nav-span {
   color: #212121;
 }
 .nav-list {
   display: flex;
-  margin-left: 93px;
-}
-.nav-list-item:not(:last-child) {
-  margin-right: 50px;
 }
 .nav-list-link {
   color: inherit;
   font-weight: 500;
   line-height: calc(16 / 14);
   letter-spacing: 0.02em;
+  padding: 25px;
 }
 .nav-list-link:focus,
 .nav-list-link:hover {
@@ -94,14 +90,15 @@ button {
   display: flex;
   align-items: center;
 }
-.header-address-item:not(:last-child) {
-  margin-right: 50px;
-}
 .header-address-contact {
   font-weight: 500;
   line-height: calc(16 / 14);
   letter-spacing: 0.02em;
   color: #757575;
+  padding: 25px;
+}
+.header-address-contact:last-child {
+  padding: 25px 0 25px 25px;
 }
 .header-address-contact:hover,
 .header-address-contact:focus {
@@ -125,7 +122,7 @@ button {
   font-size: 26px;
   line-height: calc(31 / 26);
   color: var(--brand-color);
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 .footer-span {
   color: #ffffff;
@@ -182,6 +179,7 @@ button {
   color: #ffffff;
   width: 200px;
   height: 50px;
+  border: none;
 }
 .hero-btn:hover,
 .hero-btn:focus {
@@ -223,7 +221,7 @@ button {
   margin-left: 30px;
   flex-basis: calc(100% / 3 - 30px);
   margin-top: 50px;
-  margin-bottom: 188px;
+  margin-bottom: 94px;
 }
 /*---------------team-----*/
 .team {
@@ -237,39 +235,42 @@ button {
 .team-list {
   display: flex;
   flex-wrap: wrap;
-  margin-left: -30px;
+  padding: 94px 0;
 }
 .team-list-item {
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  margin-left: 30px;
-  flex-basis: calc(100% / 4 - 30px);
+  flex-basis: 270px;
   margin-top: 50px;
-  margin-bottom: 94px;
+  margin: 0 15px;
+}
+.team-text {
+  padding: 25px;
 }
 .team-list-title {
   font-weight: 500;
   font-size: 16px;
   line-height: calc(19 / 16);
   text-align: center;
-  margin-top: 30px;
-  margin-bottom: 10px;
+  padding: 5px;
 }
 .team-list-post-title {
   font-size: 16px;
   line-height: calc(19 / 16);
   text-align: center;
   color: #757575;
-  margin-bottom: 30px;
+  padding: 5px;
 }
 
 /*---------------PORTFOLIO.HTML-----*/
 
 /*---------------Hero-----*/
-.portfolio-title {
-  display: none;
+.search-list {
+  display: flex;
+  padding: 94px 0 50px 0;
+  justify-content: center;
 }
 .search-btn {
   background: #f5f4fa;
@@ -278,21 +279,29 @@ button {
   font-size: 16px;
   line-height: calc(26 / 16);
   text-align: center;
+  border: none;
+  padding: 6px 22px;
 }
 .search-btn:hover,
 .search-btn:focus {
   background: var(--brand-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: calc(26 / 16);
-  text-align: center;
   color: #ffffff;
 }
+.product-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -30px;
+  margin-top: -30px;
+  padding-bottom: 94px;
+}
 .product-item {
-  background: #ffffff;
+  flex-basis: calc(100% / 3 - 30px);
+  margin-top: 30px;
+  margin-left: 30px;
+}
+.product-title-box {
   border: 1px solid #eeeeee;
   box-sizing: border-box;
 }
