--- a/css/style.css
+++ b/css/style.css
@@ -227,6 +227,9 @@ button {
 .team {
   background: #f5f4fa;
 }
+.team-box {
+  padding: 94px 0;
+}
 .team-title {
   font-size: 36px;
   line-height: calc(42 / 36);
@@ -235,7 +238,6 @@ button {
 .team-list {
   display: flex;
   flex-wrap: wrap;
-  padding: 94px 0;
   margin-left: -30px;
 }
 .team-list-item {
