--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,15 @@ button {
   clip-path: inset(50%);
   margin: -1px;
 }
+.logo {
+  font-family: 'Raleway', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: calc(31 / 26);
+  color: var(--brand-color);
+  margin-bottom: 20px;
+}
 /*---------------HEADER--------------*/
 .header-box {
   display: flex;
@@ -60,52 +69,43 @@ button {
   display: flex;
   align-items: center;
 }
-.nav-link {
-  font-family: Raleway;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 26px;
-  line-height: calc(31 / 26);
-  color: var(--brand-color);
-  padding: 32px 78px 32px 0;
-}
-.nav-span {
+.header-span {
   color: #212121;
 }
 .nav-list {
   display: flex;
 }
-.nav-list-link {
+.nav-link {
   color: inherit;
   font-weight: 500;
   line-height: calc(16 / 14);
   letter-spacing: 0.02em;
   padding: 25px;
 }
-.nav-list-link:focus,
-.nav-list-link:hover {
+.nav-link:focus,
+.nav-link:hover {
   color: var(--brand-color);
 }
 .header-address {
   display: flex;
   align-items: center;
 }
-.header-address-contact {
+.header-contact {
   font-weight: 500;
   line-height: calc(16 / 14);
   letter-spacing: 0.02em;
   color: #757575;
   padding: 25px;
 }
-.header-address-contact:last-child {
+.header-contact:last-child {
   padding: 25px 0 25px 25px;
 }
-.header-address-contact:hover,
-.header-address-contact:focus {
+.header-contact:hover,
+.header-contact:focus {
   color: var(--brand-color);
 }
 
-/*-------------FOOTER------------*/
+/*-------------address------------*/
 .footer {
   background: #2f303a;
 }
@@ -115,28 +115,19 @@ button {
   padding-top: 60px;
   padding-bottom: 60px;
 }
-.footer-link {
-  font-family: Raleway;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 26px;
-  line-height: calc(31 / 26);
-  color: var(--brand-color);
-  margin-bottom: 20px;
-}
 .footer-span {
   color: #ffffff;
 }
-.footer-address-item:not(:last-child) {
+.address-item:not(:last-child) {
   margin-bottom: 9px;
 }
-.footer-address-link {
+.address-link {
   font-family: inherit;
   font-style: normal;
   line-height: calc(24 / 14);
   color: #ffffff;
 }
-.footer-address-contact {
+.address-contact {
   font-family: Roboto;
   font-style: normal;
   line-height: calc(24 / 14);
@@ -194,15 +185,17 @@ button {
   margin-left: -30px;
   padding-bottom: 94px;
 }
-.benefits-list-item {
+.benefits-item {
   margin-left: 30px;
   flex-basis: calc(100% / 4 - 30px);
 }
-.benefits-list-title {
+.benefits-title {
+  font-size: 14px;
   line-height: calc(16 / 14);
   text-transform: uppercase;
+  margin-bottom: 10px;
 }
-.benefits-list-post-title {
+.benefits-text {
   line-height: calc(24 / 14);
 }
 
@@ -217,7 +210,7 @@ button {
   flex-wrap: wrap;
   margin-left: -30px;
 }
-.about-list-item {
+.about-item {
   margin-left: 30px;
   flex-basis: calc(100% / 3 - 30px);
   margin-top: 50px;
@@ -240,7 +233,7 @@ button {
   flex-wrap: wrap;
   margin-left: -30px;
 }
-.team-list-item {
+.team-item {
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -259,7 +252,7 @@ button {
   text-align: center;
   padding: 5px;
 }
-.team-list-post-title {
+.team-list-text {
   font-size: 16px;
   line-height: calc(19 / 16);
   text-align: center;
