--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,12 @@
 :root {
   --brand-color: #2196f3;
+  --first-color: #ffffff;
+  --second-color: #757575;
+  --third-color: #212121;
 }
 body {
   font-family: 'Roboto', sans-serif;
-  color: #212121;
+  color: var(--third-color);
   font-size: 14px;
   font-weight: normal;
   letter-spacing: 0.03em;
@@ -70,7 +73,7 @@ button {
   align-items: center;
 }
 .header-span {
-  color: #212121;
+  color: var(--third-color);
 }
 .nav-list {
   display: flex;
@@ -94,7 +97,7 @@ button {
   font-weight: 500;
   line-height: calc(16 / 14);
   letter-spacing: 0.02em;
-  color: #757575;
+  color: var(--second-color);
   padding: 25px;
 }
 .header-contact:last-child {
@@ -116,7 +119,7 @@ button {
   padding-bottom: 60px;
 }
 .footer-span {
-  color: #ffffff;
+  color: var(--first-color);
 }
 .address-item:not(:last-child) {
   margin-bottom: 9px;
@@ -125,7 +128,7 @@ button {
   font-family: inherit;
   font-style: normal;
   line-height: calc(24 / 14);
-  color: #ffffff;
+  color: var(--first-color);
 }
 .address-contact {
   font-family: Roboto;
@@ -154,7 +157,7 @@ button {
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  color: #ffffff;
+  color: var(--first-color);
   width: 700px;
   height: 120px;
   margin-bottom: 30px;
@@ -167,7 +170,7 @@ button {
   font-size: 16px;
   line-height: calc(30 / 16);
   letter-spacing: 0.06em;
-  color: #ffffff;
+  color: var(--first-color);
   width: 200px;
   height: 50px;
   border: none;
@@ -234,7 +237,7 @@ button {
   margin-left: -30px;
 }
 .team-item {
-  background: #ffffff;
+  background: var(--first-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -256,7 +259,7 @@ button {
   font-size: 16px;
   line-height: calc(19 / 16);
   text-align: center;
-  color: #757575;
+  color: var(--second-color);
   padding: 5px;
 }
 
@@ -283,7 +286,7 @@ button {
   background: var(--brand-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
-  color: #ffffff;
+  color: var(--first-color);
 }
 .product-list {
   display: flex;
@@ -309,5 +312,5 @@ button {
 .product-post-title {
   font-size: 16px;
   line-height: calc(30 / 16);
-  color: #757575;
+  color: var(--second-color);
 }
