--- a/css/style.css
+++ b/css/style.css
@@ -61,16 +61,19 @@ button {
   font-size: 26px;
   line-height: calc(31 / 26);
   color: var(--brand-color);
-  margin-bottom: 20px;
 }
 /*---------------HEADER--------------*/
 .header-box {
   display: flex;
   justify-content: space-between;
+  border-bottom: 1px solid #ececec;
 }
 .nav {
   display: flex;
   align-items: center;
+}
+.nav-a {
+  padding: 32px 78px 32px 0;
 }
 .header-span {
   color: var(--third-color);
@@ -123,6 +126,9 @@ button {
 }
 .address-item:not(:last-child) {
   margin-bottom: 9px;
+}
+.address-item:first-child {
+  margin-top: 20px;
 }
 .address-link {
   font-family: inherit;
@@ -281,6 +287,9 @@ button {
   border: none;
   padding: 6px 22px;
 }
+.search-btn:not(:last-child) {
+  margin-right: 8px;
+}
 .search-btn:hover,
 .search-btn:focus {
   background: var(--brand-color);
@@ -301,13 +310,17 @@ button {
   margin-left: 30px;
 }
 .product-title-box {
-  border: 1px solid #eeeeee;
-  box-sizing: border-box;
+  border-bottom: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+  box-sizing: content-box;
+  padding: 20px 24px 19px 24px;
 }
 .product-title {
   font-size: 18px;
   line-height: calc(36 / 18);
   letter-spacing: 0.06em;
+  margin-bottom: 4px;
 }
 .product-post-title {
   font-size: 16px;
