--- a/css/style.css
+++ b/css/style.css
@@ -232,7 +232,7 @@ button {
   background: #f5f4fa;
 }
 .team-box {
-  padding: 94px 0;
+  padding: 94px 15px;
 }
 .team-title {
   font-size: 36px;
